# lshcurator

./: .editorconfig  LICENSE.txt  Makefile  README.md  pyproject.toml
.github/workflows/: python-compatibility.yml  release.yml
lshcurator/: __init__.py  algorithms.py  bucket.py  candidate_selector.py  config.py  curator.py  deduper.py  types.py  utils.py
lshcurator/utils/: normalizations.py  readers.py  types.py
lshcurator/workers/: base.py  bucket_worker.py
scripts/: build_wheel.py  utils.py
tests/: test_bucket.py  test_curator.py  test_deduper.py
